form selection- large

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,15 @@
 }
 
 
-body{
+body {
   font-family: Arial;
 }
 
+.card-collection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .card {
-  padding: 2em;
+  padding: 1em;
 }
