--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
-
 
 body {
   font-family: Arial;
@@ -17,5 +15,5 @@ body {
 }
 
 .standout {
-  box-shadow: rgba(0,0,0,0.16), rgb(51,51,51) 0px 0px 0px 3px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
