--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 body {
@@ -16,4 +15,8 @@ body {
 
 .standout {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+}
+
+h1,h2,h3,h4,h5,p {
+  text-align: center;
 }
